<resources>
    <string name="app_name">TugasUTS_10117122</string>
    <string name="bonaventura">Bonaventura</string>
    <string name="verified">Verified</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="contact">Contact</string>
    <string name="friend">Friend</string>
    <string name="fullname">fullname</string>
    <string name="back_to_home">Back To Home</string>

    <string name="phone_title">Phone</string>
    <string name="phone">+6282 1954 5838</string>
    <string name="email_title">E-Mail</string>
    <string name="email">aldynosenda@mahasiswa.unikom.ac.id</string>
    <string name="ig_title">Instagram</string>
    <string name="ig">bonaventura_aldino</string>
    <string name="fb_title">Facebook</string>
    <string name="fb">Bonaventura Aldino</string>
    <string name="full_name">Bonaventura</string>
    <string name="back_to_home1">Back to\nHome</string>
    <string name="username_title">Nama Lengkap</string>
    <string name="username">"Bonaventura Aldino Senda Seni"</string>
    <string name="nim_title">NIM</string>
    <string name="nim">10117122</string>
    <string name="kelas_title">Kelas</string>
    <string name="kelas">IF-3</string>
    <string name="deskripsi_title">Deskripsi</string>
    <string name="deskripsi">Mahasiswa Teknik Informatika\nUniversitas Komputer Indonesia</string>
</resources>
